added dev mode, code refactoring,...
