# examples/openApi-petstore.json
@@ -333,6 +333,7 @@
         "requestContentType": "application/json",
         "responseContentType": "",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 340,
         "y": 100,
@@ -381,6 +382,7 @@
         "requestContentType": "application/json",
         "responseContentType": "",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 350,
         "y": 140,
@@ -735,6 +737,7 @@
         "requestContentType": "application/json",
         "responseContentType": "",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 330,
         "y": 480,
@@ -883,6 +886,7 @@
         "requestContentType": "application/json",
         "responseContentType": "",
         "showDescription": true,
+        "devMode": "",
         "outputs": 2,
         "x": 330,
         "y": 580,
@@ -1014,6 +1018,7 @@
         "requestContentType": "application/json",
         "responseContentType": "",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 330,
         "y": 700,
@@ -1363,6 +1368,7 @@
         "requestContentType": "application/json",
         "responseContentType": "application/json",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 350,
         "y": 300,
@@ -1959,6 +1965,7 @@
         "requestContentType": "application/json",
         "responseContentType": "application/json",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 340,
         "y": 260,
@@ -2197,12 +2204,407 @@
         "requestContentType": "application/octet-stream",
         "responseContentType": "application/json",
         "showDescription": true,
+        "devMode": "",
         "outputs": 1,
         "x": 530,
         "y": 340,
         "wires": [
             [
                 "a7b8f2bd24952c68"
+            ]
+        ]
+    },
+    {
+        "id": "e09a84515520c9db",
+        "type": "openApi-red",
+        "z": "eecec5c9.d293c8",
+        "name": "",
+        "openApiUrl": "https://petstore.swagger.io/v2/swagger.json",
+        "api": "pet",
+        "server": "",
+        "keepAuth": false,
+        "alternServer": false,
+        "operation": "findPetsByStatus",
+        "operationData": {
+            "tags": [
+                "pet"
+            ],
+            "summary": "Finds Pets by status",
+            "description": "Multiple status values can be provided with comma separated strings",
+            "operationId": "findPetsByStatus",
+            "produces": [
+                "application/json",
+                "application/xml"
+            ],
+            "parameters": [
+                {
+                    "name": "status",
+                    "in": "query",
+                    "description": "Status values that need to be considered for filter",
+                    "required": true,
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "enum": [
+                            "available",
+                            "pending",
+                            "sold"
+                        ],
+                        "default": "available"
+                    },
+                    "collectionFormat": "multi"
+                }
+            ],
+            "responses": {
+                "200": {
+                    "description": "successful operation",
+                    "schema": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "required": [
+                                "name",
+                                "photoUrls"
+                            ],
+                            "properties": {
+                                "id": {
+                                    "type": "integer",
+                                    "format": "int64"
+                                },
+                                "category": {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "format": "int64"
+                                        },
+                                        "name": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "xml": {
+                                        "name": "Category"
+                                    },
+                                    "$$ref": "https://petstore.swagger.io/v2/swagger.json#/definitions/Category"
+                                },
+                                "name": {
+                                    "type": "string",
+                                    "example": "doggie"
+                                },
+                                "photoUrls": {
+                                    "type": "array",
+                                    "xml": {
+                                        "wrapped": true
+                                    },
+                                    "items": {
+                                        "type": "string",
+                                        "xml": {
+                                            "name": "photoUrl"
+                                        }
+                                    }
+                                },
+                                "tags": {
+                                    "type": "array",
+                                    "xml": {
+                                        "wrapped": true
+                                    },
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "format": "int64"
+                                            },
+                                            "name": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "xml": {
+                                            "name": "Tag"
+                                        },
+                                        "$$ref": "https://petstore.swagger.io/v2/swagger.json#/definitions/Tag"
+                                    }
+                                },
+                                "status": {
+                                    "type": "string",
+                                    "description": "pet status in the store",
+                                    "enum": [
+                                        "available",
+                                        "pending",
+                                        "sold"
+                                    ]
+                                }
+                            },
+                            "xml": {
+                                "name": "Pet"
+                            },
+                            "$$ref": "https://petstore.swagger.io/v2/swagger.json#/definitions/Pet"
+                        }
+                    }
+                },
+                "400": {
+                    "description": "Invalid status value"
+                }
+            },
+            "security": [
+                {
+                    "petstore_auth": [
+                        "write:pets",
+                        "read:pets"
+                    ]
+                }
+            ],
+            "__originalOperationId": "findPetsByStatus",
+            "path": "/pet/findByStatus"
+        },
+        "errorHandling": "Standard",
+        "internalErrors": {
+            "readUrl": false
+        },
+        "parameters": [
+            {
+                "id": "statusquery",
+                "name": "status",
+                "in": "query",
+                "required": true,
+                "value": "available",
+                "isActive": true,
+                "type": "select",
+                "allowedTypes": [
+                    {
+                        "value": "select",
+                        "label": "Select",
+                        "options": [
+                            "available",
+                            "pending",
+                            "sold"
+                        ]
+                    },
+                    "str",
+                    "msg",
+                    "flow",
+                    "global"
+                ],
+                "description": "Status values that need to be considered for filter",
+                "schema": null,
+                "keys": null
+            }
+        ],
+        "requestContentType": "application/json",
+        "responseContentType": "",
+        "showDescription": true,
+        "devMode": false,
+        "outputs": 1,
+        "x": 1090,
+        "y": 100,
+        "wires": [
+            [
+                "31571d46ad5f4074"
+            ]
+        ]
+    },
+    {
+        "id": "ea54f86c9888d1a6",
+        "type": "inject",
+        "z": "eecec5c9.d293c8",
+        "name": "",
+        "repeat": "",
+        "crontab": "",
+        "once": false,
+        "onceDelay": 0.1,
+        "topic": "",
+        "payload": "",
+        "payloadType": "date",
+        "x": 900,
+        "y": 100,
+        "wires": [
+            [
+                "e09a84515520c9db"
+            ]
+        ]
+    },
+    {
+        "id": "31571d46ad5f4074",
+        "type": "debug",
+        "z": "eecec5c9.d293c8",
+        "name": "",
+        "active": true,
+        "tosidebar": true,
+        "console": false,
+        "tostatus": false,
+        "complete": "true",
+        "targetType": "full",
+        "statusVal": "",
+        "statusType": "auto",
+        "x": 1270,
+        "y": 180,
+        "wires": []
+    },
+    {
+        "id": "67cd871f73b03b55",
+        "type": "openApi-red",
+        "z": "eecec5c9.d293c8",
+        "name": "",
+        "openApiUrl": "https://petstore3.swagger.io/api/v3/openapi.json",
+        "api": "pet",
+        "server": "",
+        "keepAuth": false,
+        "alternServer": false,
+        "operation": "updatePetWithForm",
+        "operationData": {
+            "tags": [
+                "pet"
+            ],
+            "summary": "Updates a pet in the store with form data",
+            "description": "",
+            "operationId": "updatePetWithForm",
+            "parameters": [
+                {
+                    "name": "petId",
+                    "in": "path",
+                    "description": "ID of pet that needs to be updated",
+                    "required": true,
+                    "schema": {
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                },
+                {
+                    "name": "name",
+                    "in": "query",
+                    "description": "Name of pet that needs to be updated",
+                    "schema": {
+                        "type": "string"
+                    }
+                },
+                {
+                    "name": "status",
+                    "in": "query",
+                    "description": "Status of pet that needs to be updated",
+                    "schema": {
+                        "type": "string"
+                    }
+                }
+            ],
+            "responses": {
+                "405": {
+                    "description": "Invalid input"
+                }
+            },
+            "security": [
+                {
+                    "petstore_auth": [
+                        "write:pets",
+                        "read:pets"
+                    ]
+                }
+            ],
+            "__originalOperationId": "updatePetWithForm",
+            "path": "/pet/{petId}"
+        },
+        "errorHandling": "Standard",
+        "internalErrors": {
+            "readUrl": false
+        },
+        "parameters": [
+            {
+                "id": "petIdpath",
+                "name": "petId",
+                "in": "path",
+                "required": true,
+                "value": "8",
+                "isActive": true,
+                "type": "num",
+                "allowedTypes": [
+                    "num",
+                    "jsonata",
+                    "msg",
+                    "flow",
+                    "global"
+                ],
+                "description": "ID of pet that needs to be updated",
+                "schema": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "keys": null,
+                "showDescription": false
+            },
+            {
+                "id": "namequery",
+                "name": "name",
+                "in": "query",
+                "value": "Günther",
+                "isActive": true,
+                "type": "str",
+                "allowedTypes": [
+                    "str",
+                    "json",
+                    "jsonata",
+                    "msg",
+                    "flow",
+                    "global"
+                ],
+                "description": "Name of pet that needs to be updated",
+                "schema": {
+                    "type": "string"
+                },
+                "keys": null,
+                "showDescription": false
+            },
+            {
+                "id": "statusquery",
+                "name": "status",
+                "in": "query",
+                "value": "pending",
+                "isActive": true,
+                "type": "str",
+                "allowedTypes": [
+                    "str",
+                    "json",
+                    "jsonata",
+                    "msg",
+                    "flow",
+                    "global"
+                ],
+                "description": "Status of pet that needs to be updated",
+                "schema": {
+                    "type": "string"
+                },
+                "keys": null,
+                "showDescription": false
+            }
+        ],
+        "requestContentType": "application/json",
+        "responseContentType": "",
+        "showDescription": true,
+        "devMode": false,
+        "outputs": 1,
+        "x": 1100,
+        "y": 240,
+        "wires": [
+            [
+                "31571d46ad5f4074"
+            ]
+        ]
+    },
+    {
+        "id": "b1a8cc342ccfb497",
+        "type": "inject",
+        "z": "eecec5c9.d293c8",
+        "name": "",
+        "repeat": "",
+        "crontab": "",
+        "once": false,
+        "onceDelay": 0.1,
+        "topic": "",
+        "payload": "",
+        "payloadType": "date",
+        "x": 860,
+        "y": 240,
+        "wires": [
+            [
+                "67cd871f73b03b55"
             ]
         ]
     }
